--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.3.6",
+    "@vicons/ionicons5": "^0.13.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "core-js": "^3.8.3",
