--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "core-js": "^3.8.3",
+    "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.6",
     "swiper": "^11.2.10",
