--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vicons/ionicons5": "^0.13.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "core-js": "^3.8.3",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
@@ -23,6 +24,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vicons/fluent": "^0.13.0",
+    "@vicons/ionicons4": "^0.13.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
