--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.13.1",
     "core-js": "^3.8.3",
     "gsap": "^3.13.0",
+    "motion-v": "^1.7.4",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.6",
